- Some glossary work.
* stylesheets/db2html-chunk.xsl:
- Some glossary work.

* stylesheets/gettext.xsl:
- Strip trailing space from number-less headers.

* test/testdoc1/testdoc1.xml:
- Some glossary test stuff.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,17 @@
+2004-01-09  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/db2html-chunk.xsl:
+	- Some glossary work.
+
+	* stylesheets/gettext.xsl:
+	- Strip trailing space from number-less headers.
+
+	* test/testdoc1/testdoc1.xml:
+	- Some glossary test stuff.
+
+2004-01-08  Shaun McCance  <shaunm@gnome.org>
+See stylesheets/ChangeLog for previous stylesheet changes
+
 2004-01-08  Shaun McCance  <shaunm@gnome.org>
 
 	* po/POTFILES.in:
