--- a/stylesheets/ChangeLog
+++ b/stylesheets/ChangeLog
@@ -1,4 +1,7 @@
 2004-01-08  Shaun McCance  <shaunm@gnome.org>
+No longer using this file.  See ../ChangeLog for future changes.
+
+2004-01-08  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/Makefile.am:
 	* stylesheets/db2html-block.xsl:
