Updated Serbian translation.
2004-01-10  Danilo Šegan  <dsegan@gmx.net>

	* sr.po, sr@Latn.po: Updated Serbian translation.

	* POTFILES.in: Added src/yelp-error.c.

--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,9 @@
+2004-01-10  Danilo Šegan  <dsegan@gmx.net>
+
+	* sr.po, sr@Latn.po: Updated Serbian translation.
+
+	* POTFILES.in: Added src/yelp-error.c.
+
 2004.01.10  Arafat Medini <lumina@silverpen.de>
                                                                                 
 	* ar.po: Updated Arabic translation
