- Fixed the test doc so everything is valid DocBook.
2004-01-09  Eric Baudais  <drake@gnome.org>

        * test/testdoc1/testdoc1.xml:
        - Fixed the test doc so everything is valid DocBook.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-09  Eric Baudais  <drake@gnome.org>
+
+	*test/testdoc1/testdoc1.xml: 
+	- Fixed the test doc so everything is valid DocBook.
+
 2004-01-09  Shaun McCance  <shaunm@gnome.org>
 
 	* stylesheets/db2html-chunk.xsl:
