- Revert link back to the correct behavior.
* stylesheets/db2html-xref.xsl:
- Revert link back to the correct behavior.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-09  Shaun McCance  <shaunm@gnome.org>
+
+	* stylesheets/db2html-xref.xsl:
+	- Revert link back to the correct behavior.
+
 2004-01-09  Eric Baudais  <drake@gnome.org>
 
 	*test/testdoc1/testdoc1.xml: 
