--- a/po/es.po
+++ b/po/es.po
@@ -1,20 +1,20 @@
+# translation of es.po to Spanish
 # translation of yelp.HEAD.po to Spanish
 # yelp spanish .po file.
-# Copyright (C) 2001,2003 Free Software Foundation, Inc.
+# Copyright (C) 2001,2003, 2004 Free Software Foundation, Inc.
 # Juan Manuel García Molina <juanma_gm@wanadoo.es>, 2001-2002,2003.
-# Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2003.
+# Francisco Javier F. Serrador <serrador@cvs.gnome.org>, 2003, 2004.
 msgid ""
 msgstr ""
 "Project-Id-Version: es\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-01-03 21:36+0100\n"
-"PO-Revision-Date: 2004-01-03 21:38+0100\n"
+"POT-Creation-Date: 2004-01-10 14:38+0100\n"
+"PO-Revision-Date: 2004-01-10 14:56+0100\n"
 "Last-Translator: Francisco Javier F. Serrador <serrador@cvs.gnome.org>\n"
 "Language-Team: Spanish <traductores@es.gnome.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"serrador@hispalinux.es>\n"
 "X-Generator: KBabel 1.0.2\n"
 
 #: data/toc.xml.in.h:1
@@ -137,30 +137,41 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Fábrica Yelp"
 
-#: src/yelp-db-pager.c:249 src/yelp-window.c:439 src/yelp-window.c:763
-#, c-format
-msgid "The document '%s' could not be opened"
-msgstr "El documento «%s» no pudo abrirse"
-
-#: src/yelp-db-pager.c:429
+#: src/yelp-db-pager.c:426
 msgid "No href attribute found on yelp:document"
 msgstr "No se encontró atributo href en yelp:document"
 
-#: src/yelp-db-pager.c:444
+#: src/yelp-db-pager.c:441
 msgid "Out of memory"
 msgstr "Se agotó la memoria"
 
-#: src/yelp-db-pager.c:621
+#: src/yelp-db-pager.c:618
 msgid "Titlepage"
 msgstr "Página de título"
 
-#: src/yelp-db-pager.c:623
+#: src/yelp-db-pager.c:620 stylesheets/l10n.xml.in.h:27
 msgid "Contents"
 msgstr "Índice"
 
-#: src/yelp-db-pager.c:641
+#: src/yelp-db-pager.c:638 stylesheets/l10n.xml.in.h:61
 msgid "Unknown"
 msgstr "Desconocido"
+
+#: src/yelp-error.c:46
+msgid "The selected document could not be opened"
+msgstr "El documento seleccionado no pudo abrirse"
+
+#: src/yelp-error.c:52
+msgid "The selected page could not be found in this document."
+msgstr "La página selecionada no pudo encontrarse en este documento."
+
+#: src/yelp-error.c:58
+msgid "The table of contents could not be read."
+msgstr "La tabla de contenidos no se pudo leer."
+
+#: src/yelp-error.c:64
+msgid "DocBook SGML documents are no longer supported."
+msgstr "Los documentos SGML DocBook SGML ya no se soportan."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -244,19 +255,15 @@ msgstr "URI del documento"
 msgid "The URI of the document to be processed"
 msgstr "La URI del documento a ser procesado"
 
-#: src/yelp-toc-pager.c:261
+#: src/yelp-toc-pager.c:264
 msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: El contador de pausa es negativo."
 
-#: src/yelp-toc-pager.c:649 src/yelp-toc-pager.c:661
-msgid "The table of contents could not be read."
-msgstr "La tabla de contenidos no se pudo leer."
-
-#: src/yelp-toc-pager.c:868
+#: src/yelp-toc-pager.c:876
 msgid "Categories"
 msgstr "Categorías"
 
-#: src/yelp-toc-pager.c:889
+#: src/yelp-toc-pager.c:890
 msgid "Documents"
 msgstr "Documentos"
 
@@ -332,60 +339,286 @@ msgstr "/Ayuda/_Acerca de"
 msgid "Help Browser"
 msgstr "Navegador de ayuda"
 
-#: src/yelp-window.c:423
-msgid "DocBook SGML documents are no longer supported."
-msgstr "Los documentos SGML DocBook SGML ya no se soportan."
-
-#: src/yelp-window.c:546
+#: src/yelp-window.c:545 stylesheets/l10n.xml.in.h:53
 msgid "Section"
 msgstr "Sección"
 
-#: src/yelp-window.c:603
+#: src/yelp-window.c:602
 msgid "Back"
 msgstr "Atrás"
 
-#: src/yelp-window.c:604
+#: src/yelp-window.c:603
 msgid "Show previous page in history"
 msgstr "Muestra la página anterior del historial"
 
-#: src/yelp-window.c:614
+#: src/yelp-window.c:613
 msgid "Forward"
 msgstr "Adelante"
 
-#: src/yelp-window.c:615
+#: src/yelp-window.c:614
 msgid "Show next page in history"
 msgstr "Muestra la siguiente página del historial"
 
-#: src/yelp-window.c:627
+#: src/yelp-window.c:626
 msgid "Home"
 msgstr "Inicio"
 
-#: src/yelp-window.c:628
+#: src/yelp-window.c:627
 msgid "Go to home view"
 msgstr "Ir a la vista de inicio"
 
-#: src/yelp-window.c:796 src/yelp-window.c:825 src/yelp-window.c:1102
-#: src/yelp-window.c:1161
-#, c-format
-msgid "The page '%s' could not be found in this document."
-msgstr "La página «%s» no pudo encontrarse en este documento."
-
-#: src/yelp-window.c:848
+#: src/yelp-window.c:832
 msgid "Loading..."
 msgstr "Cargando..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1252
+#: src/yelp-window.c:1226
 msgid "translator_credits"
 msgstr ""
 "Francisco J.F. Serrador <serrador@cvs.gnome.org>\n"
 "Juan Manuel García Molina <juanma_gm@wanadoo.es>\n"
 "Germán Poo Caamaño <gpoo@ubiobio.cl>"
 
-#: src/yelp-window.c:1257
+#: src/yelp-window.c:1231
 msgid "A Help Browser for GNOME"
 msgstr "Visualizador de ayuda para GNOME"
+
+#: stylesheets/l10n.xml.in.h:1
+msgid "&#8216;"
+msgstr "&#8216;"
+
+#: stylesheets/l10n.xml.in.h:2
+msgid "&#8217;"
+msgstr "&#8217;"
+
+#: stylesheets/l10n.xml.in.h:3
+msgid "&#8220;"
+msgstr "&#8220;"
+
+#: stylesheets/l10n.xml.in.h:4
+msgid "&#8221;"
+msgstr "&#8221;"
+
+#: stylesheets/l10n.xml.in.h:5
+msgid "About This Bibliography"
+msgstr "Acerca de esta bibliografía"
+
+#: stylesheets/l10n.xml.in.h:6
+msgid "About This Book"
+msgstr "Acerca de este libro"
+
+#: stylesheets/l10n.xml.in.h:7
+msgid "About This Chapter"
+msgstr "Acerca de este capítulo"
+
+#: stylesheets/l10n.xml.in.h:8
+msgid "About This Entry"
+msgstr "Acerca de esta entrada"
+
+#: stylesheets/l10n.xml.in.h:9
+msgid "About This Glossary"
+msgstr "Acerca de este glosario"
+
+#: stylesheets/l10n.xml.in.h:10
+msgid "About This Index"
+msgstr "Acerca de este índice"
+
+#: stylesheets/l10n.xml.in.h:11
+msgid "About This Part"
+msgstr "Acerca de esta parte"
+
+#: stylesheets/l10n.xml.in.h:12
+msgid "About This Preface"
+msgstr "Acerca de este prefacio"
+
+#: stylesheets/l10n.xml.in.h:13
+msgid "About This Reference"
+msgstr "Acerca de esta referencia"
+
+#: stylesheets/l10n.xml.in.h:14
+msgid "About This Section"
+msgstr "Acerca de esta sección"
+
+#: stylesheets/l10n.xml.in.h:15
+msgid "About This Set"
+msgstr "Acerca de este conjunto"
+
+#: stylesheets/l10n.xml.in.h:16
+msgid "Affiliation"
+msgstr "Afiliación"
+
+#: stylesheets/l10n.xml.in.h:17
+msgid "Appendix"
+msgstr "Apéndice"
+
+#: stylesheets/l10n.xml.in.h:18
+msgid "Article"
+msgstr "Artículo"
+
+#: stylesheets/l10n.xml.in.h:19
+msgid "Audience"
+msgstr "Audiencia"
+
+#: stylesheets/l10n.xml.in.h:20
+msgid "Author"
+msgstr "Autor"
+
+#: stylesheets/l10n.xml.in.h:21
+msgid "Bigliography"
+msgstr "Bibliografía"
+
+#: stylesheets/l10n.xml.in.h:22
+msgid "Book"
+msgstr "Libro"
+
+#: stylesheets/l10n.xml.in.h:23
+msgid "Caution"
+msgstr "Precaución"
+
+#: stylesheets/l10n.xml.in.h:24
+msgid "Chapter"
+msgstr "Capítulo"
+
+#: stylesheets/l10n.xml.in.h:25
+msgid "Collaborator"
+msgstr "Colaborador"
+
+#: stylesheets/l10n.xml.in.h:26
+msgid "Colophon"
+msgstr "Colofón"
+
+#: stylesheets/l10n.xml.in.h:28
+msgid "Copyright"
+msgstr "Copyright"
+
+#: stylesheets/l10n.xml.in.h:29
+msgid "Date"
+msgstr "Fecha"
+
+#: stylesheets/l10n.xml.in.h:30
+msgid "Dedication"
+msgstr "Dedicatoria"
+
+#: stylesheets/l10n.xml.in.h:31
+msgid "Editor"
+msgstr "Redactor"
+
+#: stylesheets/l10n.xml.in.h:32
+msgid "Email"
+msgstr "Correo-e"
+
+#: stylesheets/l10n.xml.in.h:33
+msgid "Example"
+msgstr "Ejemplo"
+
+#: stylesheets/l10n.xml.in.h:34
+msgid "Figure"
+msgstr "Figura"
+
+#: stylesheets/l10n.xml.in.h:35
+msgid "Glossary"
+msgstr "Glosario"
+
+#: stylesheets/l10n.xml.in.h:36
+msgid "Important"
+msgstr "Importante"
+
+#: stylesheets/l10n.xml.in.h:37
+msgid "Index"
+msgstr "Índice analítico"
+
+#: stylesheets/l10n.xml.in.h:38
+msgid "Legal Notice"
+msgstr "Advertencia legal"
+
+#: stylesheets/l10n.xml.in.h:39
+msgid "Level"
+msgstr "Nivel"
+
+#: stylesheets/l10n.xml.in.h:40
+msgid "Message Audience"
+msgstr "Audiencia del mensaje"
+
+#: stylesheets/l10n.xml.in.h:41
+msgid "Message Level"
+msgstr "Nivel del mensaje"
+
+#: stylesheets/l10n.xml.in.h:42
+msgid "Message Origin"
+msgstr "Origen del mensaje"
+
+#: stylesheets/l10n.xml.in.h:43
+msgid "Note"
+msgstr "Nota"
+
+#: stylesheets/l10n.xml.in.h:44
+msgid "Origin"
+msgstr "Origen"
+
+#: stylesheets/l10n.xml.in.h:45
+msgid "Other Contributor"
+msgstr "Otro contribuidor"
+
+#: stylesheets/l10n.xml.in.h:46
+msgid "Part"
+msgstr "Parte"
+
+#: stylesheets/l10n.xml.in.h:47
+msgid "Preface"
+msgstr "Prólogo"
+
+#: stylesheets/l10n.xml.in.h:48
+msgid "Publisher"
+msgstr "Editor"
+
+#: stylesheets/l10n.xml.in.h:49
+msgid "Reference"
+msgstr "Referencia"
+
+#: stylesheets/l10n.xml.in.h:50
+msgid "Reference Entry"
+msgstr "Entrada de referencia"
+
+#: stylesheets/l10n.xml.in.h:51
+msgid "Reference Section"
+msgstr "Sección de referencias"
+
+#: stylesheets/l10n.xml.in.h:52
+msgid "Revision History"
+msgstr "Histórico de revisiones"
+
+#: stylesheets/l10n.xml.in.h:54
+msgid "See"
+msgstr "Vea"
+
+#: stylesheets/l10n.xml.in.h:55
+msgid "See Also"
+msgstr "Vea además"
+
+#: stylesheets/l10n.xml.in.h:56
+msgid "Set Index"
+msgstr "Establecer índice"
+
+#: stylesheets/l10n.xml.in.h:57
+msgid "Table"
+msgstr "Tabla"
+
+#: stylesheets/l10n.xml.in.h:58
+msgid "Table of Contents"
+msgstr "Índice"
+
+#: stylesheets/l10n.xml.in.h:59
+msgid "Tip"
+msgstr "Consejo"
+
+#: stylesheets/l10n.xml.in.h:60
+msgid "Title"
+msgstr "Título"
+
+#: stylesheets/l10n.xml.in.h:62
+msgid "Warning"
+msgstr "Atención"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -449,17 +682,12 @@ msgstr "Ayuda"
 #~ msgid "Loading..&nbsp;"
 #~ msgstr "Cargando..&nbsp;"
 
-#~ msgid "About This Document"
-#~ msgstr "Acerca de este documento"
-
 #~ msgid "Previous"
 #~ msgstr "Anterior"
 
 #~ msgid "Next"
 #~ msgstr "Siguiente"
 
-#~ msgid "Index"
-#~ msgstr "Índice"
-
 #~ msgid "Search in the index"
 #~ msgstr "Buscar en el índice"
+
