--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2004-01-10  Christian Neumair  <chris@gnome-de.org>
+
+	* de.po: Updated German translation.
+
 2004-01-10  Francisco Javier F. Serrador  <serrador@cvs.gnome.org>
 
 	* es.po: Updated Spanish translation.
