--- a/po/de.po
+++ b/po/de.po
@@ -7,8 +7,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Yelp 2.5.2.1\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2004-01-06 10:23+0100\n"
-"PO-Revision-Date: 2004-01-06 10:23+0100\n"
+"POT-Creation-Date: 2004-01-10 14:59+0100\n"
+"PO-Revision-Date: 2004-01-10 14:59+0100\n"
 "Last-Translator: Christian Neumair <chris@gnome-de.org>\n"
 "Language-Team: German <gnome-de@gnome.org>\n"
 "MIME-Version: 1.0\n"
@@ -135,30 +135,41 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Yelp-Fabrik"
 
-#: src/yelp-db-pager.c:249 src/yelp-window.c:439 src/yelp-window.c:763
-#, c-format
-msgid "The document '%s' could not be opened"
-msgstr "Das Dokument »%s« konnte nicht geöffnet werden"
-
-#: src/yelp-db-pager.c:429
+#: src/yelp-db-pager.c:426
 msgid "No href attribute found on yelp:document"
 msgstr "Kein href-Attribut im yelp:-Dokument gefunden"
 
-#: src/yelp-db-pager.c:444
+#: src/yelp-db-pager.c:441
 msgid "Out of memory"
 msgstr "Speichermangel"
 
-#: src/yelp-db-pager.c:621
+#: src/yelp-db-pager.c:618
 msgid "Titlepage"
 msgstr "Titelseite"
 
-#: src/yelp-db-pager.c:623
+#: src/yelp-db-pager.c:620 stylesheets/l10n.xml.in.h:27
 msgid "Contents"
 msgstr "Inhalt"
 
-#: src/yelp-db-pager.c:641
+#: src/yelp-db-pager.c:638 stylesheets/l10n.xml.in.h:61
 msgid "Unknown"
 msgstr "Unbekannt"
+
+#: src/yelp-error.c:46
+msgid "The selected document could not be opened"
+msgstr "Das gewählte Dokument konnte nicht geöffnet werden"
+
+#: src/yelp-error.c:52
+msgid "The selected page could not be found in this document."
+msgstr "Die gewählte Seite konnte in diesem Dokument nicht gefunden werden."
+
+#: src/yelp-error.c:58
+msgid "The table of contents could not be read."
+msgstr "Das Inhaltsverzeichnis konnte nicht gelesen werden."
+
+#: src/yelp-error.c:64
+msgid "DocBook SGML documents are no longer supported."
+msgstr "DocBook-SGML-Dokumente werden nicht mehr unterstützt"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -247,15 +258,11 @@ msgstr "Die Adresse des zu verarbeitenden Dokuments"
 msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: Pausen-Zähler ist negativ"
 
-#: src/yelp-toc-pager.c:652 src/yelp-toc-pager.c:664
-msgid "The table of contents could not be read."
-msgstr "Das Inhaltsverzeichnis konnte nicht gelesen werden."
-
-#: src/yelp-toc-pager.c:882
+#: src/yelp-toc-pager.c:876
 msgid "Categories"
 msgstr "Kategorien"
 
-#: src/yelp-toc-pager.c:896
+#: src/yelp-toc-pager.c:890
 msgid "Documents"
 msgstr "Dokumente"
 
@@ -331,60 +338,296 @@ msgstr "/Hilfe/_Info"
 msgid "Help Browser"
 msgstr "Hilfe-Browser"
 
-#: src/yelp-window.c:423
-msgid "DocBook SGML documents are no longer supported."
-msgstr "DocBook-SGML-Dokumente werden nicht mehr unterstützt"
-
-#: src/yelp-window.c:546
+#: src/yelp-window.c:545 stylesheets/l10n.xml.in.h:53
 msgid "Section"
 msgstr "Abschnitt"
 
-#: src/yelp-window.c:603
+#: src/yelp-window.c:602
 msgid "Back"
 msgstr "Zurück"
 
-#: src/yelp-window.c:604
+#: src/yelp-window.c:603
 msgid "Show previous page in history"
 msgstr "Die vorherige Seite in der Chronik anzeigen"
 
-#: src/yelp-window.c:614
+#: src/yelp-window.c:613
 msgid "Forward"
 msgstr "Vor"
 
-#: src/yelp-window.c:615
+#: src/yelp-window.c:614
 msgid "Show next page in history"
 msgstr "Die nächste Seite in der Chronik anzeigen"
 
-#: src/yelp-window.c:627
+#: src/yelp-window.c:626
 msgid "Home"
 msgstr "Inhalt"
 
-#: src/yelp-window.c:628
+#: src/yelp-window.c:627
 msgid "Go to home view"
 msgstr "Zur Inhaltsansicht gehen"
 
-#: src/yelp-window.c:796 src/yelp-window.c:825 src/yelp-window.c:1102
-#: src/yelp-window.c:1161
-#, c-format
-msgid "The page '%s' could not be found in this document."
-msgstr "Die Seite »%s« konnte in diesem Dokument nicht gefunden werden."
-
-#: src/yelp-window.c:848
+#: src/yelp-window.c:832
 msgid "Loading..."
 msgstr "Ladevorgang..."
 
 #. Note to translators: put here your name (and address) so it
 #. * will shop up in the "about" box
-#: src/yelp-window.c:1252
+#: src/yelp-window.c:1226
 msgid "translator_credits"
 msgstr ""
 "Christian Meyer <chrisime@gnome.org>\n"
 "Christian Neumair <chris@gnome-de.org>\n"
 "Matthias Warkus <mawarkus@gnome.org>"
 
-#: src/yelp-window.c:1257
+#: src/yelp-window.c:1231
 msgid "A Help Browser for GNOME"
 msgstr "Ein Hilfe-Browser für GNOME"
+
+#: stylesheets/l10n.xml.in.h:1
+msgid "&#8216;"
+msgstr "&#8216;"
+
+#: stylesheets/l10n.xml.in.h:2
+msgid "&#8217;"
+msgstr "&#8217;"
+
+#: stylesheets/l10n.xml.in.h:3
+msgid "&#8220;"
+msgstr "&#8220;"
+
+#: stylesheets/l10n.xml.in.h:4
+msgid "&#8221;"
+msgstr "&#8221;"
+
+#: stylesheets/l10n.xml.in.h:5
+msgid "About This Bibliography"
+msgstr "Info zu dieser Bibliographie"
+
+#: stylesheets/l10n.xml.in.h:6
+msgid "About This Book"
+msgstr "Info zu diesem Buch"
+
+#: stylesheets/l10n.xml.in.h:7
+msgid "About This Chapter"
+msgstr "Info zu diesem Kapitel"
+
+#: stylesheets/l10n.xml.in.h:8
+msgid "About This Entry"
+msgstr "Info zu diesem Eintrag"
+
+#: stylesheets/l10n.xml.in.h:9
+msgid "About This Glossary"
+msgstr "Info zu diesem Glossar"
+
+#: stylesheets/l10n.xml.in.h:10
+msgid "About This Index"
+msgstr "Info zu diesem Index"
+
+# CHECK
+#: stylesheets/l10n.xml.in.h:11
+msgid "About This Part"
+msgstr "Info zu diesem Teil"
+
+#: stylesheets/l10n.xml.in.h:12
+msgid "About This Preface"
+msgstr "Info zu diesem Vorwort"
+
+#: stylesheets/l10n.xml.in.h:13
+msgid "About This Reference"
+msgstr "Info zu diesem Verweis"
+
+#: stylesheets/l10n.xml.in.h:14
+msgid "About This Section"
+msgstr "Info zu diesem Abschnitt"
+
+# CHECK
+#: stylesheets/l10n.xml.in.h:15
+msgid "About This Set"
+msgstr "Info zu diesem Satz"
+
+# CHECK wird der Bedeutung definitiv nicht gerecht
+#: stylesheets/l10n.xml.in.h:16
+msgid "Affiliation"
+msgstr "Mitgliedschaft"
+
+#: stylesheets/l10n.xml.in.h:17
+msgid "Appendix"
+msgstr "Anhang"
+
+#: stylesheets/l10n.xml.in.h:18
+msgid "Article"
+msgstr "Artikel"
+
+# CHECK
+#: stylesheets/l10n.xml.in.h:19
+msgid "Audience"
+msgstr "Zielgruppe"
+
+#: stylesheets/l10n.xml.in.h:20
+msgid "Author"
+msgstr "Autor"
+
+#: stylesheets/l10n.xml.in.h:21
+msgid "Bigliography"
+msgstr "Bibliographie"
+
+#: stylesheets/l10n.xml.in.h:22
+msgid "Book"
+msgstr "Buch"
+
+#: stylesheets/l10n.xml.in.h:23
+msgid "Caution"
+msgstr "Achtung"
+
+#: stylesheets/l10n.xml.in.h:24
+msgid "Chapter"
+msgstr "Kapitel"
+
+# CHECK Mitarbeiter?
+#: stylesheets/l10n.xml.in.h:25
+msgid "Collaborator"
+msgstr "Mitwirkender"
+
+# CHECK Fachchinesisch?
+#: stylesheets/l10n.xml.in.h:26
+msgid "Colophon"
+msgstr "Kolophon"
+
+#: stylesheets/l10n.xml.in.h:28
+msgid "Copyright"
+msgstr "Copyright"
+
+#: stylesheets/l10n.xml.in.h:29
+msgid "Date"
+msgstr "Datum"
+
+#: stylesheets/l10n.xml.in.h:30
+msgid "Dedication"
+msgstr "Widmung"
+
+#: stylesheets/l10n.xml.in.h:31
+msgid "Editor"
+msgstr "Editor"
+
+#: stylesheets/l10n.xml.in.h:32
+msgid "Email"
+msgstr "E-Mail"
+
+#: stylesheets/l10n.xml.in.h:33
+msgid "Example"
+msgstr "Beispiel"
+
+# CHECK
+#: stylesheets/l10n.xml.in.h:34
+msgid "Figure"
+msgstr "Illustration"
+
+#: stylesheets/l10n.xml.in.h:35
+msgid "Glossary"
+msgstr "Glossar"
+
+#: stylesheets/l10n.xml.in.h:36
+msgid "Important"
+msgstr "Wichtig"
+
+#: stylesheets/l10n.xml.in.h:37
+msgid "Index"
+msgstr "Index"
+
+#: stylesheets/l10n.xml.in.h:38
+msgid "Legal Notice"
+msgstr "Rechtlicher Hinweis"
+
+# CHECK
+#: stylesheets/l10n.xml.in.h:39
+msgid "Level"
+msgstr "Niveau"
+
+#: stylesheets/l10n.xml.in.h:40
+msgid "Message Audience"
+msgstr "Zielgruppe der Nachricht"
+
+# CHECK
+#: stylesheets/l10n.xml.in.h:41
+msgid "Message Level"
+msgstr "Nachrichtenniveau"
+
+#: stylesheets/l10n.xml.in.h:42
+msgid "Message Origin"
+msgstr "Nachrichtenursprung"
+
+#: stylesheets/l10n.xml.in.h:43
+msgid "Note"
+msgstr "Hinweis"
+
+#: stylesheets/l10n.xml.in.h:44
+msgid "Origin"
+msgstr "Ursprung"
+
+#: stylesheets/l10n.xml.in.h:45
+msgid "Other Contributor"
+msgstr "Weiterer Mitwirkender"
+
+# CHECK
+#: stylesheets/l10n.xml.in.h:46
+msgid "Part"
+msgstr "Teil"
+
+#: stylesheets/l10n.xml.in.h:47
+msgid "Preface"
+msgstr "Vorwort"
+
+#: stylesheets/l10n.xml.in.h:48
+msgid "Publisher"
+msgstr "Herausgeber"
+
+#: stylesheets/l10n.xml.in.h:49
+msgid "Reference"
+msgstr "Verweis"
+
+#: stylesheets/l10n.xml.in.h:50
+msgid "Reference Entry"
+msgstr "Verweiseintrag"
+
+#: stylesheets/l10n.xml.in.h:51
+msgid "Reference Section"
+msgstr "Verweisabschnitt"
+
+#: stylesheets/l10n.xml.in.h:52
+msgid "Revision History"
+msgstr "Revisionschronik"
+
+#: stylesheets/l10n.xml.in.h:54
+msgid "See"
+msgstr "Siehe"
+
+#: stylesheets/l10n.xml.in.h:55
+msgid "See Also"
+msgstr "Siehe auch"
+
+#: stylesheets/l10n.xml.in.h:56
+msgid "Set Index"
+msgstr "Siehe Index"
+
+#: stylesheets/l10n.xml.in.h:57
+msgid "Table"
+msgstr "Tabelle"
+
+#: stylesheets/l10n.xml.in.h:58
+msgid "Table of Contents"
+msgstr "Inhaltsverzeichnis"
+
+#: stylesheets/l10n.xml.in.h:59
+msgid "Tip"
+msgstr "Tipp"
+
+#: stylesheets/l10n.xml.in.h:60
+msgid "Title"
+msgstr "Titel"
+
+#: stylesheets/l10n.xml.in.h:62
+msgid "Warning"
+msgstr "Warnung"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -393,6 +636,3 @@ msgstr "Hilfe zu GNOME holen"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Hilfe"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "Das Dokument »%s« existiert nicht"
